--- a/index.html
+++ b/index.html
@@ -3,47 +3,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AgriNexus IoT 연동 + GPT 예측 + 워크플로우 대시보드</title>
+  <title>AgriNexus IoT 상태 리포트 + 알림 루프 + 워크플로우 클릭</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; padding: 2rem; background: #f7fafc; text-align: center; }
-    input, button { padding: 0.8rem; font-size: 1rem; width: 90%; max-width: 500px; margin: 0.5rem; border-radius: 6px; border: 1px solid #ccc; }
+    body { font-family: Arial; background: #f9fbfc; padding: 2rem; text-align: center; }
+    input, button { padding: 0.8rem; font-size: 1rem; margin: 0.5rem; width: 90%; max-width: 500px; border-radius: 6px; border: 1px solid #ccc; }
     .section { background: white; margin: 2rem auto; padding: 1.5rem; border-radius: 12px; max-width: 800px; box-shadow: 0 0 10px rgba(0,0,0,0.06); }
-    #workflow { background: #fff; padding: 1rem; border-radius: 10px; }
+    canvas { margin-top: 1rem; background: white; border-radius: 10px; }
+    .log { margin-top: 1rem; font-weight: bold; }
+    #workflow { background: white; padding: 1rem; border-radius: 10px; }
   </style>
 </head>
 <body>
 
-  <h1>🌐 AgriNexus IoT 제어 + GPT 예측 + 워크플로우 시각화</h1>
+  <h1>📡 AgriNexus IoT 상태 리포트 + 알림 루프 + 워크플로우 클릭</h1>
 
   <div class="section">
-    <h3>🛠 IoT 명령 실행 (실제 API 연동 구조)</h3>
-    <button onclick="sendIoTCommand('vent-open')">🌬️ 온실 환기 시작</button>
-    <button onclick="sendIoTCommand('water-start')">💧 물 주기 시작</button>
-    <div id="iotStatus" style="margin-top:1rem; color:#007c4d;"></div>
+    <h3>📥 IoT 상태 보고서 반영</h3>
+    <button onclick="loadIoTStatus()">IoT 장비 상태 확인</button>
+    <div id="iotStatus" class="log"></div>
   </div>
 
   <div class="section">
-    <h3>🧠 GPT 기반 행동 예측 (시뮬레이션)</h3>
-    <input id="situation" placeholder="상황 입력 (예: 토양 건조)" />
-    <button onclick="simulatePrediction()">예측 실행</button>
-    <div id="gptPrediction" style="margin-top:1rem; font-weight:bold;"></div>
+    <h3>🔄 예측 결과 → 자동 알림 발송</h3>
+    <input id="prediction" placeholder="예측 결과 (예: 수분 부족)" />
+    <button onclick="triggerAlert()">알림 자동 발송</button>
+    <div id="alertLog" class="log"></div>
   </div>
 
   <div class="section">
-    <h3>📈 스마트 대시보드: 전체 자동화 워크플로우</h3>
-    <div id="workflow" class="mermaid">
+    <h3>📈 워크플로우 클릭 기록 + 세부 로그 열람</h3>
+    <div id="workflow" class="mermaid" onclick="logNodeClick(event)">
       graph TD
-        알림[알림 수신]
-        예측[GPT 예측]
-        승인[관리자 승인]
-        제어[IoT 제어 명령 실행]
-        저장[DB 저장 및 리포트]
-        알림 --> 예측 --> 승인 --> 제어 --> 저장
+        Alert[알림] --> Predict[예측]
+        Predict --> Approve[승인]
+        Approve --> IoT[IoT 제어]
+        IoT --> Report[리포트 저장]
     </div>
+    <div id="clickHistory" class="log"></div>
   </div>
 
   <script>
@@ -56,26 +56,33 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    function sendIoTCommand(action) {
-      // 실제 IoT 장비 제어 API (모의 POST)
-      fetch("https://iot-server.example.com/control", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ action, time: new Date().toISOString() })
-      });
-      db.ref("iotLogs").push({ action, time: new Date().toISOString() });
-      document.getElementById("iotStatus").innerText = "✅ 명령 전송됨: " + action;
+    function loadIoTStatus() {
+      fetch("https://iot-server.example.com/status")
+        .then(res => res.json())
+        .then(data => {
+          db.ref("iotStatusLogs").push(data);
+          document.getElementById("iotStatus").innerText = `온도: ${data.temp}°C, 수분: ${data.moisture}%`;
+        }).catch(() => {
+          document.getElementById("iotStatus").innerText = "❌ IoT 상태 불러오기 실패";
+        });
     }
 
-    function simulatePrediction() {
-      const situation = document.getElementById("situation").value;
-      const recommendation = {
-        "토양 건조": "💧 수분 공급이 필요합니다.",
-        "기온 상승": "🌬️ 환기가 필요합니다.",
-        "고온/다습": "⚠️ 병충해 예방 조치 필요"
-      };
-      const response = recommendation[situation] || "❓ 분석된 결과 없음";
-      document.getElementById("gptPrediction").innerText = response;
+    function triggerAlert() {
+      const text = document.getElementById("prediction").value;
+      db.ref("alerts").push({
+        message: text,
+        sentAt: new Date().toISOString(),
+        auto: true
+      });
+      document.getElementById("alertLog").innerText = `📨 자동 알림 발송됨: ${text}`;
+    }
+
+    function logNodeClick(event) {
+      const target = event.target.textContent;
+      if (target) {
+        db.ref("workflowClicks").push({ node: target, time: new Date().toISOString() });
+        document.getElementById("clickHistory").innerText = `📝 클릭 기록 저장됨: ${target}`;
+      }
     }
 
     mermaid.initialize({ startOnLoad: true });
