--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>AgriNexus AI Dashboard</title>
-</head>
-<body>
-    <h1>✅ Slack 메시지 + PDF 미리보기</h1>
-    <h2>✅ 승인 로그 기반 요약 자동 분석</h2>
-    <h3>✅ 통합 대시보드 시각화</h3>
-    <p>전체 시스템이 통합된 GPT 기반 AgriNexus AI 플랫폼입니다.</p>
-</body>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
