--- a/index.html
+++ b/index.html
@@ -3,44 +3,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AgriNexus 승인 기반 자동 시각화 + 행동 분석 + GPT 정책 알림</title>
+  <title>AgriNexus 정책 PDF + 최적 경로 + UI 시각화</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-database-compat.js"></script>
   <style>
-    body { font-family: Arial; padding: 2rem; background: #f4f9fc; text-align: center; }
-    .section { background: white; padding: 1.5rem; margin: 2rem auto; max-width: 800px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
-    input, button, textarea { padding: 0.8rem; width: 90%; max-width: 500px; font-size: 1rem; margin: 0.5rem; border-radius: 6px; border: 1px solid #ccc; }
-    canvas { margin-top: 2rem; background: white; border-radius: 10px; }
-    #workflow { background: white; padding: 1rem; border-radius: 10px; transition: all 0.3s ease-in-out; }
+    body { font-family: Arial; background: #f4f9fc; padding: 2rem; text-align: center; }
+    input, button, textarea { padding: 0.8rem; font-size: 1rem; width: 90%; max-width: 500px; margin: 0.5rem; border-radius: 6px; border: 1px solid #ccc; }
+    .section { background: white; padding: 1.5rem; margin: 2rem auto; max-width: 800px; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.06); }
+    canvas { margin-top: 1rem; border-radius: 10px; background: white; }
+    #workflow { margin-top: 2rem; padding: 1rem; background: #fff; border-radius: 10px; }
   </style>
 </head>
 <body>
 
-  <h1>🚀 AgriNexus 승인 → 자동화 시각화 + GPT 정책 생성</h1>
+  <h1>📋 AgriNexus 정책 PDF + 추천 경로 + UI 애니메이션</h1>
 
   <div class="section">
-    <h3>✅ 승인 → 자동 워크플로우 시각화 애니메이션</h3>
-    <button onclick="triggerWorkflow()">승인 시각화 애니메이션 시작</button>
+    <h3>📄 정책 자동 생성 결과 → PDF 변환 + 관리자 전송</h3>
+    <textarea id="policyText" placeholder="생성된 정책 내용 입력"></textarea>
+    <input id="adminEmail" placeholder="관리자 이메일" />
+    <button onclick="createPolicyPDF()">PDF 생성 및 전송</button>
+    <div id="pdfStatus" style="color:#007c4d;"></div>
+  </div>
+
+  <div class="section">
+    <h3>🧠 사용자 클릭 기반 최적 경로 추천</h3>
+    <button onclick="recommendPath()">최적 경로 분석</button>
+    <div id="pathSuggestion" style="margin-top:1rem; font-weight:bold;"></div>
+  </div>
+
+  <div class="section">
+    <h3>🎞️ 실시간 워크플로우 UI 애니메이션</h3>
     <div id="workflow" class="mermaid">
-      graph TD
-        Start[승인됨] --> Command[IoT 명령]
-        Command --> Policy[정책 자동 생성]
-        Policy --> Notify[알림 발송]
+      graph LR
+        알림 --> 예측 --> 승인 --> 제어 --> 저장
     </div>
-  </div>
-
-  <div class="section">
-    <h3>📊 사용자 클릭 행동 분석</h3>
-    <canvas id="behaviorChart" width="700" height="300"></canvas>
-  </div>
-
-  <div class="section">
-    <h3>🧠 GPT 기반 정책 알림 생성 (시뮬레이션)</h3>
-    <textarea id="policyContext" placeholder="정책 상황 요약 입력 (예: 수분 부족 시 자동 관수)"></textarea>
-    <button onclick="generatePolicy()">정책 메시지 생성</button>
-    <div id="gptPolicy" style="margin-top:1rem; font-weight:bold;"></div>
   </div>
 
   <script>
@@ -53,36 +53,39 @@
     firebase.initializeApp(firebaseConfig);
     const db = firebase.database();
 
-    function triggerWorkflow() {
-      document.getElementById("workflow").classList.add("highlight");
-      setTimeout(() => mermaid.init(undefined, "#workflow"), 300);
+    async function createPolicyPDF() {
+      const { jsPDF } = window.jspdf;
+      const policy = document.getElementById("policyText").value;
+      const email = document.getElementById("adminEmail").value;
+
+      const doc = new jsPDF();
+      doc.text("AgriNexus 자동 정책 리포트", 20, 20);
+      doc.text("정책 내용: " + policy, 20, 40);
+      doc.text("생성 시각: " + new Date().toLocaleString(), 20, 60);
+
+      const blob = doc.output("blob");
+      const formData = new FormData();
+      formData.append("pdf", blob, "policy_report.pdf");
+      formData.append("email", email);
+
+      await fetch("https://your-server.com/send-policy-report", {
+        method: "POST",
+        body: formData
+      });
+
+      document.getElementById("pdfStatus").innerText = "📎 관리자에게 PDF 전송 완료!";
     }
 
-    db.ref("workflowClicks").on("value", snapshot => {
+    async function recommendPath() {
+      const snapshot = await db.ref("workflowClicks").once("value");
       const data = snapshot.val() || {};
-      const stats = {};
+      const stepCount = {};
       for (const key in data) {
-        const node = data[key].node;
-        stats[node] = (stats[node] || 0) + 1;
+        const step = data[key].node;
+        stepCount[step] = (stepCount[step] || 0) + 1;
       }
-      const ctx = document.getElementById("behaviorChart").getContext("2d");
-      new Chart(ctx, {
-        type: "bar",
-        data: {
-          labels: Object.keys(stats),
-          datasets: [{
-            label: "사용자 워크플로우 클릭 분석",
-            data: Object.values(stats),
-            backgroundColor: "#007c4d"
-          }]
-        }
-      });
-    });
-
-    function generatePolicy() {
-      const context = document.getElementById("policyContext").value;
-      const policyText = `📌 정책 생성: "${context}" 상황에서 자동 대응 정책이 적용됩니다.`;
-      document.getElementById("gptPolicy").innerText = policyText;
+      const sorted = Object.entries(stepCount).sort((a, b) => b[1] - a[1]);
+      document.getElementById("pathSuggestion").innerText = `🔥 추천 흐름 최빈값 단계: ${sorted[0][0]}`;
     }
 
     mermaid.initialize({ startOnLoad: true });
